[metadata]
name = stixpy
author = STIX Team
author_email = shane.maloney@dias.ie
license = BSD 3-Clause
license_file = LICENSE.rst
url =
description = Analysis software for Solar Orbiter Spectromter Telescope for Imaging X-rays
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    sunpy[net,timeseries]>=3.1
    stixcore@git+https://github.com/i4ds/STIXCore
    reproject

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest<=6.0.0
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier
    sunpy-sphinx-theme

[options.package_data]
stixpy = data/*

[tool:pytest]
testpaths = "stixpy" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True
filterwarnings =
  ignore:defusedxml.lxml is no longer supported:DeprecationWarning
  ignore:Matplotlib is currently using agg:UserWarning

[coverage:run]
omit =
  stixpy/_sunpy_init*
  stixpy/conftest.py
  stixpy/*setup_package*
  stixpy/tests/*
  stixpy/*/tests/*
  stixpy/extern/*
  stixpy/version*
  */stixpy/_sunpy_init*
  */stixpy/conftest.py
  */stixpy/*setup_package*
  */stixpy/tests/*
  */stixpy/*/tests/*
  */stixpy/extern/*
  */stixpy/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
