[metadata]
name = stixpy
author = STIX Team
author_email = shane.maloney@dias.ie
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/TCDSolar/stixpy
description = Analysis software for Solar Orbiter Spectrometer Telescope for Imaging X-rays (STIX)
long_description = file: README.rst
long_description_content_type = text/x-rst
platform = any
keywords = solar physics, solar, sun, x-rays
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
include_package_data = True
setup_requires = setuptools_scm
install_requires =
    sunpy[net,timeseries]>=3.1
    reproject
    astroquery
    intervaltree
    roentgen
    matplotlib
    xrayvisim~=0.2.0rc
[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier
    pydata-sphinx-theme
    sphinx-design
    sphinx_changelog
    sphinx-gallery

[options.package_data]
stixpy = data/*

[tool:pytest]
testpaths = "stixpy" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "stixpy[/\]_dev" ".jupyter" ".history" "tools"
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True
filterwarnings =
  ignore:defusedxml.lxml is no longer supported:DeprecationWarning
  ignore:Matplotlib is currently using agg:UserWarning

[isort]
balanced_wrapping = true
extend_skip =
    docs/conf.py,
    stixpy/__init__.py,
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = stixpy
length_sort = false
length_sort_sections = stdlib
line_length = 120
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER

[codespell]
skip = ,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history
ignore-words-list =
    alog,
    nd,
    nin,
    observ,
    ot,
    te,
    upto,
    afile,
    precessed,
    process,
    livetime,
    technik

[coverage:run]
omit =
  stixpy/_sunpy_init*
  stixpy/conftest.py
  stixpy/*setup_package*
  stixpy/tests/*
  stixpy/*/tests/*
  stixpy/extern/*
  stixpy/version*
  */stixpy/_sunpy_init*
  */stixpy/conftest.py
  */stixpy/*setup_package*
  */stixpy/tests/*
  */stixpy/*/tests/*
  */stixpy/extern/*
  */stixpy/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
